# propertytracker

./: .env.example  .gitignore  apply_reviews.py  config.yml.example  pyproject.toml  review_sales.py
.github/workflows/: fortnightly-report.yml  monthly-report.yml  review-poll.yml  weekly-report.yml
data/: propertytracker.db
docs/: local-scheduler.md
docs/plans/: 2026-02-01-comparables-review-implementation.md  2026-02-01-comparables-review-system.md  2026-02-02-simplified-telegram-report-design.md  2026-02-06-domain-sold-listings-implementation.md  2026-02-06-domain-sold-listings-integration.md  2026-02-06-review-ux-revamp-design.md  2026-02-06-review-ux-revamp-implementation.md
scripts/: install_local_scheduler.sh  run_weekly_local.sh  uninstall_local_scheduler.sh
src/tracker/: __main__.py  cli.py  db.py
src/tracker/compute/: equity.py  gap_tracker.py  metrics.py  segments.py  time_adjust.py
src/tracker/enrich/: classifier.py  domain.py  pipeline.py  zoning.py
src/tracker/ingest/: domain_scraper.py  domain_sold.py  downloader.py  (+5 more)
tests/: conftest.py  test_classifier.py  test_cli_ingest_google.py  test_cli_review.py  test_db.py  test_db_schema_migration.py  test_domain.py  test_domain_sold.py  test_downloader.py  test_enrich_pipeline.py  test_equity.py  test_google_search.py  test_llm_agent.py  test_matcher.py  test_metrics.py  test_metrics_review.py  test_normalise.py  test_parser.py  test_review_telegram.py  test_segments.py  test_telegram.py  test_telegram_digest.py  test_time_adjust.py  test_zoning.py
webhook/: setup.sh  worker.js  wrangler.toml
(+2 files in other folders)
