[project]
name = "propertytracker"
version = "0.1.0"
description = "Sydney property equity and affordability monitor"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "requests>=2.28",
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "numpy>=1.24",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
tracker = "tracker.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tracker"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
